<resources>
    <string name="app_name">Flashshare</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="name">Nome</string>
    <string name="username">Username</string>
    <string name="login">Entrar</string>
    <string name="register">Cadastar</string>
    <string name="do_not_have_an_account">Não tem uma conta?</string>
    <string name="sign_up">Cadastre-se</string>

    <string name="loguot">Sair</string>
    <string name="home">Home</string>
    <string name="search">Pesquisa</string>
    <string name="posts">Postagens</string>
    <string name="profile">Perfil</string>
    <string name="edit_button">Editar</string>
    <string name="delete_button">Excluir</string>

    <string name="gallery_button">Abrir Galeria</string>
    <string name="camera_button">Abrir Câmera</string>

    <string name="publications">Publicações</string>
    <string name="default_quantity">0</string>
    <string name="followers">Seguidores</string>
    <string name="following">Seguindo</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="post_details">Detalhes da Postagem</string>
    <string name="change_photo">ALterar Foto</string>
    <string name="follow_button">Seguir</string>
    <string name="unfllow_button">Deixar de Seguir</string>

    <string name="bio">Bio</string>
    <string name="comment">Comentario</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_button">Salvar</string>
    <string name="filterTitle">Filtros</string>
    <string name="post_image_button">Publicar</string>
    <string name="description_post">Descrição</string>
    <string name="search_user">Buscar Usuários</string>

    <string name="input_comment">Digite o seu comentario</string>
    <string name="positive_button">Enviar</string>
    <string name="negative_button">Cancelar</string>

    <string name="alert_dialog_warning">Aviso!</string>
    <string name="alert_dialog_delete_post">Você quer excluir essa postagem?</string>

    <string name="error_get_user_data">Falha ao carregar os dados do Usuário</string>
    <string name="error_save_user_data">Falha ao salvar os dados do Usuário</string>
    <string name="error_login">Não foi possivel realizar o login, tente novamente mais tarde!</string>
    <string name="error_register">Não foi possivel cadastrar o usuário, tente novamente mais tarde!</string>
    <string name="error_message">Falha inesperada, tente novamente mais tarde!</string>

    <string name="success_save_user_data">Os dados do Usuário foramsalvos</string>
    <string name="success_login">Os dados do Usuário foram salvos</string>
    <string name="success_register">O Usuário cadastrado com sucesso</string>
</resources>