<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.EditProfileActivity">

    <include
        android:id="@+id/editProfile_Toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progressBarImageProfile"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/imageAvatarProfile"
                    app:layout_constraintEnd_toEndOf="@+id/imageAvatarProfile"
                    app:layout_constraintStart_toStartOf="@+id/imageAvatarProfile"
                    app:layout_constraintTop_toTopOf="@+id/imageAvatarProfile" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageAvatarProfile"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/profile"
                    android:src="@drawable/ic_avatar_default"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textChangePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="@string/change_photo"
                    android:textColor="@color/purple_700"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageAvatarProfile" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="auto"
                android:focusableInTouchMode="true"
                android:minHeight="50dp"
                app:boxStrokeColor="@color/purple_700"
                app:hintTextColor="@color/purple_700">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_TextInput"
                    style="@style/InputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/gray_700"
                    android:hint="@string/name"
                    android:minHeight="50dp"
                    android:textColorHint="@color/gray_700"
                    android:textCursorDrawable="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                app:boxStrokeColor="@color/purple_700"
                app:hintTextColor="@color/purple_700"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bioUserTextInput"
                    style="@style/InputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_bio"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/gray_700"
                    android:hint="@string/bio"
                    android:minHeight="50dp"
                    android:textColorHint="@color/gray_700" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <Button
                    android:id="@+id/updateButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray_500"
                    android:text="@string/save_button"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBarSaveData"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="2dp"
                    android:progressTint="@color/black"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/updateButton"
                    app:layout_constraintStart_toStartOf="@+id/updateButton"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>